--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ dmypy.json
 cython_debug/
 
 #shape predictor
-.shape_predictor/
+shape_predictor/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
